fix margin-right being set to too high value for low-width viewports

--- a/trunk/30/wasteland-woff-obf/EPUB/wasteland.css
+++ b/trunk/30/wasteland-woff-obf/EPUB/wasteland.css
@@ -5,7 +5,7 @@
 
 body {
     margin-left: 6em;
-    margin-right: 16em;
+    margin-right: 2em;
     color: black;
     /* use sans-serif as fallback to make the difference obvious */    
     font-family: 'OldStandard', sans-serif;    
