--- a/trunk/30/wasteland/EPUB/wasteland.css
+++ b/trunk/30/wasteland/EPUB/wasteland.css
@@ -4,7 +4,7 @@
 
 body {
     margin-left: 6em;
-    margin-right: 16em;
+    margin-right: 2em;
     color: black;    
     font-family: times, 'times new roman', serif;    
     background-color: rgb(255,255,245);
